Fixed span word wrap

--- a/style.scss
+++ b/style.scss
@@ -90,7 +90,7 @@ h3 {
 
   &__description {
     font-size: 1.2rem;
-    word-wrap: wrap;
+    word-wrap: break-word;
   }
 
   &__close {
